--- a/homework-task/hw1/index.html
+++ b/homework-task/hw1/index.html
@@ -20,6 +20,20 @@
 <p>Успіх фільму призвів до створення франшизи, що складається з кількох сиквелів, телесеріалу, коміксів, романів та відеоігор. У 2008 році «Термінатор» обраний Бібліотекою Конгресу для збереження в Національному реєстрі фільмів як «<i>культурно, історично або естетично значущий</i>»</p>
  <p>   Фільм відкривається сценою похмурого майбутнього, де триває війна людей і машин. Але головна битва цієї війни має відбутися в минулому, 1984 року. В нічному Лос-Анджелесі водій сміттєвозу стає свідком дивних спалахів, з яких з'являється оголений чоловік, <b>Термінатор Т-800</b> (Арнольд Шварценеггер). Цей невідомий знаходить групу панків, яким наказує віддати йому одяг. У відповідь на погрози невідомий демонструє величезну силу, вбиває панків і відбирає одяг. Згодом з іншого спалаху виникає інший чоловік, Кайл Різ (Майкл Бін), котрий забирає у волоцюги штани і тікає від переслідування поліцією</p>
 
+
+<!--Dz 1_2-->
+<p>Квадрат числа: a<sup>2</sup></p>
+
+<p>Радіус сфери: r = &#8730;(V / (4/3&#960;))</p>
+
+<p>Формула квадратного кореня: &#8730;<sup>n</sup></p>
+
+<p>Формула квадратного рівняння: x = (-b &#177; &#8730;(b<sup>2</sup> - 4ac)) / 2a</p>
+
+<p>Площа кола: S = &#960;r<sup>2</sup></p>
+
+<p>Теорема Піфагора: c = &#8730;(a<sup>2</sup> + b<sup>2</sup>)</p>
+
 </body>
 </html>
 
