--- a/homework-task/hw1/index.html
+++ b/homework-task/hw1/index.html
@@ -11,6 +11,9 @@
         h1, h2 {
             color: darkgray;
         }
+        sup {
+            font-size: 10px;
+        }
     </style>
 </head>
 <body>
