--- a/homework-task/hw2/hw2-3/homework2-3.html
+++ b/homework-task/hw2/hw2-3/homework2-3.html
@@ -5,35 +5,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style2-3.css">
+<!--    &#8451; Температура: -5;&#8451;-->
 </head>
 <body>
 <div class="wrapper">
     <div class="card"><h2>Січень</h2>
-        <p>Довжина дня: 8 годин <br>
-        Температура: -5&#8451;;
-        </p> </div>
+        <ul>
+            <li>Довжина дня: 8 годин</li>
+            <li>Температура: -5&#8451;</li>
+            <li>Температурний рекорд: -25&#8451;</li>
+            <li>Кількість днів: 31</li>
+        </ul> </div>
     <div class="card"><h2>Лютий</h2>
-        <p></p> </div>
+        <ul>
+            <li>Довжина дня: 9 годин</li>
+            <li>Температура: -3&#8451;</li>
+            <li>Температурний рекорд: -20&#8451;</li>
+            <li>Кількість днів: 28 (29 у високосний рік)</li>
+        </ul> </div>
     <div class="card"><h2>Березень</h2>
-        <p></p> </div>
+        <ul>
+            <li>Довжина дня: 11 годин</li>
+            <li>Температура: 2&#8451;</li>
+            <li>Температурний рекорд: -10&#8451;</li>
+            <li>Кількість днів: 31</li>
+        </ul> </div>
     <div class="card"><h2>Квітень</h2>
-        <p></p> </div>
+        <ul>
+            <li>Довжина дня: 13 годин</li>
+            <li>Температура: 10&#8451;</li>
+            <li>Температурний рекорд: -5&#8451;</li>
+            <li>Кількість днів: 3</li>
+        </ul> </div>
     <div class="card"><h2>Травень</h2>
-        <p></p> </div>
+        <ul>
+            <li>Довжина дня: 15 годин</li>
+            <li>Температура: 15&#8451;</li>
+            <li>Температурний рекорд: 30&#8451;</li>
+            <li>Кількість днів: 31</li>
+        </ul> </div>
     <div class="card"><h2>Червень</h2>
-        <p></p> </div>
+        <ul>
+            <li>Довжина дня: 17 годин</li>
+            <li>Температура: 20&#8451;</li>
+            <li>Температурний рекорд: 35&#8451;</li>
+            <li>Кількість днів: 30</li>
+        </ul> </div>
     <div class="card"><h2>Липень</h2>
-        <p></p> </div>
+        <ul>
+            <li>Довжина дня: 16 годин</li>
+            <li>Температура: 25&#8451;</li>
+            <li>Температурний рекорд: 40&#8451;</li>
+            <li>Кількість днів: 31</li>
+        </ul> </div>
     <div class="card"><h2>Серпень</h2>
-        <p></p> </div>
+        <ul>
+            <li>Довжина дня: 14 годин</li>
+            <li>Температура: 24&#8451;</li>
+            <li>Температурний рекорд: 38&#8451;</li>
+            <li>Кількість днів: 31</li>
+        </ul> </div>
     <div class="card"><h2>Вересень</h2>
-        <p></p> </div>
+        <ul>
+            <li>Довжина дня: 12 годин</li>
+            <li>Температура: 18&#8451;</li>
+            <li>Температурний рекорд: 30&#8451;</li>
+            <li>Кількість днів: 30</li>
+        </ul> </div>
     <div class="card"><h2>Жовтень</h2>
-        <p></p> </div>
+        <ul>
+            <li>Довжина дня: 10 годин</li>
+            <li>Температура: 10&#8451;</li>
+            <li>Температурний рекорд: 25&#8451;</li>
+            <li>Кількість днів: 31</li>
+        </ul> </div>
     <div class="card"><h2>Листопад</h2>
-        <p></p> </div>
+        <ul>
+            <li>Довжина дня: 8 годин</li>
+            <li>Температура: 5&#8451;</li>
+            <li>Температурний рекорд: 15&#8451;</li>
+            <li>Кількість днів: 30</li>
+        </ul> </div>
     <div class="card"><h2>Грудень</h2>
-        <p></p> </div>
+        <ul>
+            <li>Довжина дня: 7годин</li>
+            <li>Температура: -2&#8451;</li>
+            <li>Температурний рекорд: -20&#8451;</li>
+            <li>Кількість днів: 31</li>
+        </ul> </div>
 </div>
 
 </body>
