--- a/homework-task/hw6/task1/hw6-1.html
+++ b/homework-task/hw6/task1/hw6-1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="icon" type="image/png" href="img/favicon2.png">
+    <link rel="icon" type="image/png" href="../img/favicon2.png">
     <style>
         body {
             text-decoration: none;
