--- a/homework-task/hw1/hw1-3/hw1_3.html
+++ b/homework-task/hw1/hw1-3/hw1_3.html
@@ -4,21 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            background-image: url("https://images.unsplash.com/photo-1502691876148-a84978e59af8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80");
-            background-attachment: fixed;
-            background-size: cover;
-
-        }
-        h1, p {
-            background-color: rgba(247, 240, 237, 0.9);
-            width: 60%;
-            padding: 20px;
-            margin-left: 100px;
-            margin-top: 50px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Сприйняття кольорів у психології: вплив кольорів на емоції та поведінку людини</h1>
