add directoria and css hw4

--- a/homework-task/hw4/hw4-2/hw4-2.html
+++ b/homework-task/hw4/hw4-2/hw4-2.html
@@ -4,80 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            margin: 0;
-            color: #FFFFFF;
-            font-size: 45px;
-
-        }
-        header {
-            display: flex;
-            align-items: center;
-            justify-content:center;
-            height: 14vh;
-            background: #8D8484;
-        }
-        footer {
-            display: flex;
-            align-items: center;
-            justify-content:center;
-            height: 14vh;
-            background: #BDBDBD;
-        }
-        main {
-            display: flex;
-            align-items: center;
-            justify-content:center;
-        }
-
-        .aside-one {
-            height: 24vh;
-            width: 73vw;
-            display: flex;
-            align-items: center;
-            justify-content:center;
-            background: #776969;
-        }
-        .aside-two {
-            height: 24vh;
-            width: 73vw;
-            display: flex;
-            align-items: center;
-            justify-content:center;
-            background: #643030;
-        }
-        .aside-three {
-            height: 24vh;
-            width: 73vw;
-            display: flex;
-            align-items: center;
-            justify-content:center;
-            background: #441818;
-        }
-        section {
-            display: flex;
-            flex-direction: column;
-
-            width: 27vw;
-        }
-
-        .box-one {
-            display: flex;
-            align-items: center;
-            justify-content:center;
-            width: 27vw;
-            height: 36vh;
-            background: #937575;
-        }
-        .box-two {
-            display: flex;
-            align-items: center;
-            justify-content:center;
-            width: 27vw;
-            height: 36vh;
-            background: #644C4C;        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>Header</header>
