--- a/homework-task/hw4/hw4-1/hw4-1.html
+++ b/homework-task/hw4/hw4-1/hw4-1.html
@@ -4,39 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-    body {
-      margin: 0;
-    }
-    header, footer {
-      height: 22vh;
-      background: #D9D9D9;
-    }
-    main {
-      display: flex;
-    }
-    aside {
-      height: 56vh;
-      width: 27vw;
-      background: #C0BDBD;
-    }
-    section {
-      display: flex;
-      flex-direction: column;
-      height: 56vh;
-    }
-
-    .box-one {
-      height: 50%;
-      width: 46vw;
-      background: #827878;
-    }
-    .box-two {
-      height: 50%;
-      width: 46vw;
-      background: #B7ADAD;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header></header>
