--- a/homework-task/hw4/hw4-3/hw4-3.html
+++ b/homework-task/hw4/hw4-3/hw4-3.html
@@ -4,48 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            margin: 0;
-        }
-        header {
-            height: 5vh;
-            background: #D9D9D9;
-        }
-        main {
-            display: flex;
-        }
-        aside {
-            height: 74vh;
-            width: 59vw;
-            background: #C0BDBD;
-        }
-        section {
-            display: flex;
-            flex-direction: column;
-
-        }
-
-        .box-one {
-            height: 40vh;
-            width: 41vw;
-            background: #827878;
-        }
-        .box-two {
-            height: 34vh;
-            width: 41vw;
-            background: #B7ADAD;
-        }
-        .wrapper {
-            height: 10vh;
-            background: #D9D9D9;
-        }
-
-        footer {
-            height: 11vh;
-            background: #AFA9A9;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header></header>
