--- a/homework-task/hw4/hw4-4/hw4-4.html
+++ b/homework-task/hw4/hw4-4/hw4-4.html
@@ -4,48 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            margin: 0;
-        }
-        header {
-            height: 5vh;
-            background: #D9D9D9;
-        }
-        main {
-            display: flex;
-        }
-        .aside-one {
-            height: 85vh;
-            width: 29vw;
-            background: #A4A4A4;
-        }
-        .aside-two {
-            width: 30vw;
-            height: 85vh;
-            background: #C1C1C1;
-        }
-        section {
-            display: flex;
-            flex-direction: column;
-            height: 85vh;
-        }
-
-        .box-one {
-            height: 50%;
-            width: 41vw;
-            background: #827878;
-        }
-        .box-two {
-            height: 50%;
-            width: 41vw;
-            background: #B7ADAD;
-        }
-        footer {
-            height: 10vh;
-            background: #D9D9D9;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header></header>
