--- a/homework-task/hw8/hw8-1/index.html
+++ b/homework-task/hw8/hw8-1/index.html
@@ -4,40 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="reset-css.css">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style-0-375.css">
-    <link rel="stylesheet" href="style-375-768.css">
+    <link rel="stylesheet" href="style-mobile.css">
+    <link rel="stylesheet" href="style-tablet.css">
 </head>
 <body>
 <section class="items">
-    <div>
-        <img src="img/%23Image1.png" alt="">
+    <div class="item" >
+        <img src="img/Image1.png" alt="">
         <h2>Nicole Milton</h2>
         <p>Nicole Milton</p>
     </div>
-    <div>
-        <img src="img/%23Image2.png" alt="">
+    <div class="item" >
+        <img src="img/Image2.png" alt="">
         <h2>Bootstrap Based Design</h2>
         <p>Nicole Milton</p>
     </div>
-    <div>
-        <img src="img/%23Image3.png" alt="">
+    <div class="item" >
+        <img src="img/Image3.png" alt="">
         <h2>Prototyping</h2>
         <p>Nicole Milton</p>
     </div>
-    <div>
-        <img src="img/%23Image4.png" alt="">
+    <div class="item">
+        <img src="img/Image4.png" alt="">
         <h2>More than Image</h2>
         <p>Nicole Milton</p>
     </div>
-    <div>
-        <img src="img/%23Image5.png" alt="">
+    <div class="item">
+        <img src="img/Image5.png" alt="">
         <h2>Startup Framework Generator</h2>
         <p>Nicole Milton</p>
     </div>
-    <div>
-        <img src="img/%23Image6.png" alt="">
+    <div class="item">
+        <img src="img/Image6.png" alt="">
         <h2>More than Design</h2>
         <p>Nicole Milton</p>
     </div>
